# 3DIA

./: .gitignore  .pre-commit-config.yaml  =0.6.0  ARCHITECTURE.md  CHANGELOG.md  CODE_ANALYSIS_AND_ENHANCEMENTS.md  COMPLETE_PACKAGE_README.md  DEPENDENCY_ANALYSIS.md  ENHANCEMENT_PLAN.md  FEATURES_AND_USAGE.md  FINAL_DEBUGGING_SUMMARY.md  INSTALLATION_TROUBLESHOOTING.md  MIGRATION.md  NAPARI_FEATURES_OVERVIEW.md  NAPARI_INSTALLATION_GUIDE.md  PROGRESS.md  README.md  SUPPORTED_FILE_FORMATS.md  WIDGET_CONFIGURATION_GUIDE.md  WINDOWS_INSTALLATION.md  bug_fixes.py  conftest.py  create_test_image.py  fix-dependencies.bat  install.bat  install_formats.bat  install_imaris_zarr.bat  install_minimal.bat  pyproject.toml  quick_start_napari.py  quickstart.bat  requirements-full.txt  requirements-minimal.txt  requirements.txt  run_configurable.bat  start.bat  test-installation.bat  test_advanced_enhancements.py  test_batch_hca_features.py  test_core_functionality.py  (+8 more)
.github/workflows/: ci.yml
.pymaris_project/session-20260208-211104/metadata/: provenance.json
.pymaris_project/session-20260208-211104/outputs/tables/: trace_table.csv
.pymaris_project/session-20260208-211105/metadata/: provenance.json
.pymaris_project/session-20260208-211456/metadata/: provenance.json
.pymaris_project/session-20260208-211456/outputs/images/: richardson_lucy_deconvolved.tif
.pymaris_project/session-20260208-211456/outputs/meshes/: trace.json
.pymaris_project/session-20260213-233640/metadata/: provenance.json
.pymaris_project/session-20260213-233640/outputs/images/: richardson_lucy_deconvolved.tif
.pymaris_project/session-20260213-233817/metadata/: provenance.json
.pymaris_project/session-20260213-233817/outputs/images/: richardson_lucy_deconvolved.tif  wiener_deconvolved.tif
.pymaris_project/session-20260213-234018/metadata/: provenance.json
.pymaris_project/session-20260213-234018/outputs/images/: richardson_lucy_deconvolved.tif  wiener_deconvolved.tif
.pymaris_project/session-20260213-234236/metadata/: provenance.json
.pymaris_project/session-20260213-234236/outputs/images/: richardson_lucy_deconvolved.tif  wiener_deconvolved.tif
.pymaris_project/session-20260214-002257/metadata/: provenance.json
.pymaris_project/session-20260214-002257/outputs/images/: richardson_lucy_deconvolved.tif  wiener_deconvolved.tif
.pymaris_project/session-20260214-004046/metadata/: provenance.json
.pymaris_project/session-20260214-004046/outputs/images/: richardson_lucy_deconvolved.tif  wiener_deconvolved.tif
.pymaris_project/session-20260214-004212/metadata/: provenance.json
.pymaris_project/session-20260214-004212/outputs/images/: richardson_lucy_deconvolved.tif  wiener_deconvolved.tif
.pymaris_project/session-20260214-004728/metadata/: provenance.json
.pymaris_project/session-20260214-011843/metadata/: provenance.json
config/: config.json  widget_config.json
docs/: CLI_WORKFLOWS.md  CODEX53_RECONSTRUCTION_INTEGRATION.md  REMAKE_STRATEGY.md  REPRODUCIBLE_PIPELINE.md
examples/reconstruction/: deconvolution_distance_map.params.json
examples/workflows/: restoration_ai_denoise.json  restoration_denoise.json  restoration_distance_map.json  segmentation_watershed.json  tracing_skeleton.json
schemas/: workflow.schema.json
src/: MANIFEST.in  advanced_analysis.py  analysis_widget.py  batch_processor.py  enhanced_web_app.py  fibsem_plugins.py  file_io_napari.py  laminAmutants.py  main.py  main_napari.py  main_napari_configurable.py  napari.yaml  napari_analyzer.py  processing_widget.py  replit.md  scientific_analyzer.py  segmentation_widget.py  setup.py  simple_analyzer.py  tif_diagnostic.py  timelapse_processor.py
src/pymaris/: __init__.py  advanced_analysis.py  analysis.py  benchmark.py  cli.py  data_model.py  io.py  jobs.py  layers.py  logging.py  measurements.py  project_store.py  timelapse_processor.py  workflow.py  workflow_runner.py  workflow_validation.py
src/pymaris/backends/: __init__.py  baseline.py  registry.py  types.py
src/pymaris/reconstruction/: __init__.py  calibration.py  engine.py  external.py  plugin.py  plugins.py  qa.py  registry.py  types.py
src/pymaris_napari/: __init__.py  _io.py  _widgets.py  app.py  configurable.py  napari.yaml  provenance.py  settings.py  workflow_widget.py
src/static/: style.css
src/templates/: index.html  microscopy_analyzer.html  napari_interface.html
src/utils/: __init__.py  analysis_utils.py  image_utils.py
src/widgets/: __init__.py  ai_segmentation_widget.py  analysis_widget.py  biophysics_widget.py  deconvolution_widget.py  distance_transform_widget.py  enhanced_file_io_widget.py  filament_tracing_widget.py  file_io_widget.py  file_io_widget.py.backup  hca_widget.py  interactive_plotting_widget.py  magicgui_analysis_widget.py  processing_widget.py  segmentation_widget.py  spots_detection_logic.py  spots_detection_widget.py  statistics_widget.py  tracking_widget.py  visualization_widget.py  volume_rendering_widget.py  widget_manager.py
tests/: test_advanced_enhancements.py  test_backend_parity.py  test_backends_registry.py  test_batch_processor_exports.py  test_benchmark.py  test_cli.py  test_core_boundary.py  test_image_volume_and_io.py  test_legacy_shims.py  test_napari_io_adapter.py  test_napari_settings.py  test_napari_widget_smoke.py  test_napari_widgets_registry.py  test_napari_workspace_presets.py  test_npe2_manifest.py  test_phase0_baseline_docs.py  test_project_store.py  test_reconstruction_core.py  test_reconstruction_plugin_parity.py  test_reconstruction_qa.py  test_scientific_analyzer_tracking.py  test_simple_analyzer.py  test_ui_provenance.py  test_workflow_examples.py  test_workflow_jobs.py  test_workflow_runner_api.py  test_workflow_validation.py
(+4 files in other folders)
